--- a/res-ui/layout/sigma_toolbox_preference_middle.xml
+++ b/res-ui/layout/sigma_toolbox_preference_middle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright 2022 The DotOS Project
+     Copyright 2021 xdroid, xyzprjkt
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,10 +14,15 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <color name="build_status_card_bg">@android:color/system_neutral1_0</color>
-    <color name="alpha_color_accent">@*android:color/system_accent1_600</color>
-    <color name="alpha_color_accent2">@*android:color/system_accent1_400</color>
-    <color name="alpha_color_secondary_accent">@*android:color/system_accent2_500</color>
-    <color name="alpha_color_tertiary_accent">@*android:color/system_accent3_400</color>
-</resources>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
+    style="@style/dotPreferenceMiddle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <include
+        layout="@layout/toolbox_dashboard_pref"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</FrameLayout>
