--- a/res/layout/about_device_info.xml
+++ b/res/layout/about_device_info.xml
@@ -68,8 +68,7 @@ Copyright (C) The 2023 the risingOS Android Project
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/hashtag"
-                    android:text="#Mind makes it Real...!"
+                    android:id="@+id/device_name_model"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:fadingEdge="horizontal"
@@ -78,7 +77,7 @@ Copyright (C) The 2023 the risingOS Android Project
                     android:gravity="start"
                     android:scrollHorizontally="true"
                     android:ellipsize="end"
-                    android:maxLines="2"
+                    android:maxLines="1"
                     android:textColor="#FFFFFF"
                     android:fontFamily="@*android:string/config_headlineFontFamily"
                     android:textSize="12sp" />
@@ -91,7 +90,8 @@ Copyright (C) The 2023 the risingOS Android Project
                 android:gravity="bottom">
 
                 <TextView
-                    android:id="@+id/device_name_model"
+                    android:id="@+id/hashtag"
+                    android:text="#Mind makes it Real!"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:fadingEdge="horizontal"
@@ -99,7 +99,7 @@ Copyright (C) The 2023 the risingOS Android Project
                     android:gravity="start"
                     android:scrollHorizontally="true"
                     android:ellipsize="end"
-                    android:maxLines="2"
+                    android:maxLines="1"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     android:fontFamily="@*android:string/config_headlineFontFamily" />
